--- a/.github/workflows/api-run-jobs.yaml
+++ b/.github/workflows/api-run-jobs.yaml
@@ -25,3 +25,5 @@ jobs:
       - run: |
           gh api /repos/$GITHUB_REPOSITORY/actions/runs/$RUN_ID/jobs | jq '.jobs[]| select (.conclusion == "success") | .name, .head_branch, (.steps[]|select(.conclusion == "success")|.name)'
           gh api /repos/$GITHUB_REPOSITORY/actions/runs/$RUN_ID/jobs
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
