--- a/.github/workflows/api-run-jobs.yaml
+++ b/.github/workflows/api-run-jobs.yaml
@@ -27,6 +27,7 @@ jobs:
       - job3
     steps:
       - run: |
+          echo /repos/$GITHUB_REPOSITORY/actions/runs/$RUN_ID/jobs
           gh api /repos/$GITHUB_REPOSITORY/actions/runs/$RUN_ID/jobs | jq '.jobs[]| select (.conclusion == "success") | .name, .head_branch, (.steps[]|select(.conclusion == "success")|.name)'
           gh api /repos/$GITHUB_REPOSITORY/actions/runs/$RUN_ID/jobs
         env:
