--- a/.github/workflows/sarif.yaml
+++ b/.github/workflows/sarif.yaml
@@ -7,6 +7,7 @@ jobs:
     permissions:
       security-events: write
     steps:
+      - uses: actions/checkout@v4
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
         with:
