--- a/.github/workflows/sarif.yaml
+++ b/.github/workflows/sarif.yaml
@@ -12,3 +12,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: ./vulnerabilities-results.sarif
+      - name: Upload fake SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ./package.sarif
