--- a/.github/workflows/workflow-skipped.yaml
+++ b/.github/workflows/workflow-skipped.yaml
@@ -1,22 +1,22 @@
-name: workflow-skipped
-on:
-  workflow_dispatch:
+    name: workflow-skipped
+    on:
+      workflow_dispatch:
 
-run-name: |
-  ${{ contains(github.event.issue.labels.*.name, 'bug') ||
-  contains(github.event.issue.labels.*.name, 'dependencies') ||
-  contains(github.event.issue.labels.*.name, 'enhancement') }}
+    run-name: |
+      ${{ contains(github.event.issue.labels.*.name, 'bug') ||
+      contains(github.event.issue.labels.*.name, 'dependencies') ||
+      contains(github.event.issue.labels.*.name, 'enhancement') }}
 
-jobs:
-  fail:
-    runs-on: ubuntu-latest
-    if: false
+    jobs:
+      fail:
+        runs-on: ubuntu-latest
+        if: false
 
-    steps:
-      - run: echo Never run
+        steps:
+          - run: echo Never run
 
   pass:
-    meeds: fail
+    needs: fail
     runs-on: ubuntu-latest
     if: needs.fail.outcome != 'skipped' && false
 
