--- a/.github/workflows/outputs-json.yaml
+++ b/.github/workflows/outputs-json.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - id: step1
         run: |
-          echo tags<<EOF >> $GITHUB_OUTPUT
+          echo "tags<<EOF" >> $GITHUB_OUTPUT
           echo {"key1": "value1", "key2": "value2", "key3": "value3"}' >> $GITHUB_OUTPUT
           echo EOF >> $GITHUB_OUTPUT
       - id: step2
