--- a/.github/workflows/outputs-json.yaml
+++ b/.github/workflows/outputs-json.yaml
@@ -14,7 +14,9 @@ jobs:
           echo '{"key1": "value1", "key2": "value2", "key3": "value3"}'
           echo EOF
           } >> $GITHUB_OUTPUT
+          echo tags2='{"key1": "value1", "key2": "value2", "key3": "value3"}' >> $GITHUB_OUTPUT
       - id: step2
         run: |
           echo ${{ steps.step1.outputs.tags }}
           echo '${{ steps.step1.outputs.tags }}'
+          echo '${{ steps.step1.outputs.tags2 }}'
