--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -9,6 +9,7 @@ jobs:
     env:
       a: aaa
     steps:
+      - uses: actions/checkout@v4
       - name: Call action 1
         uses: ./.github/actions/show
       - name: Call action 2
@@ -18,17 +19,17 @@ jobs:
 
   show-workflow-1:
     needs: show-action
-    uses: ./github/workflows/workflow-show
+    uses: ./github/workflows/workflow-show.yaml
 
   show-workflow-2:
     needs: show-workflow-1
-    uses: ./github/workflows/workflow-show
+    uses: ./github/workflows/workflow-show.yaml
     env:
       a: ${{ env.a }}
 
   show-workflow-3:
     needs: show-workflow-2
-    uses: ./github/workflows/workflow-show
+    uses: ./github/workflows/workflow-show.yaml
     secrets:
       SECRET_1: ${{ secrets.SECRET_1 }}
     env:
