--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -19,17 +19,17 @@ jobs:
 
   show-workflow-1:
     needs: show-action
-    uses: ./github/workflows/workflow-show.yaml
+    uses: ./.github/workflows/workflow-show.yaml
 
   show-workflow-2:
     needs: show-workflow-1
-    uses: ./github/workflows/workflow-show.yaml
+    uses: ./.github/workflows/workflow-show.yaml
     env:
       a: ${{ env.a }}
 
   show-workflow-3:
     needs: show-workflow-2
-    uses: ./github/workflows/workflow-show.yaml
+    uses: ./.github/workflows/workflow-show.yaml
     secrets:
       SECRET_1: ${{ secrets.SECRET_1 }}
     env:
