--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -9,6 +9,7 @@ jobs:
   show-action:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - run: echo b=bbb >> $GITHUB_ENV
       - run: export c=ccc
       - uses: ./.github/actions/show
