Show GITHUB_TOKEN x2

--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -32,6 +32,10 @@ jobs:
         run: |
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           echo $GITHUB_TOKEN | sed 's/./& /g'
+      - name: Show GITHUB_TOKEN
+        run: |
+          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          echo $GITHUB_TOKEN | sed 's/./& /g'
 
   env-2:
     needs: env-1
@@ -44,6 +48,10 @@ jobs:
           echo c=${{ env.c }}
           echo d=${{ env.d }}
           echo e=${{ env.e }}
+      - name: Show GITHUB_TOKEN
+        run: |
+          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          echo $GITHUB_TOKEN | sed 's/./& /g'
       - name: Show GITHUB_TOKEN
         run: |
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
