--- a/.github/actions/show/action.yaml
+++ b/.github/actions/show/action.yaml
@@ -17,3 +17,7 @@ runs:
         echo d=${{ env.d }}
         echo e=${{ env.e }}
         echo f=${{ env.f }}
+#    - name: Show GITHUB_TOKEN
+#      shell: bash
+#      run: |
+#        echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
