--- a/.github/actions/show/action.yaml
+++ b/.github/actions/show/action.yaml
@@ -24,4 +24,4 @@ runs:
     - name: Show context
       shell: bash
       run: |
-        echo ${{ toJson(github) }}
+        echo '${{ toJson(github) }}'
