--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -36,7 +36,7 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
       - name: Show context
         run: |
-          echo ${{ toJson(github) }}
+        echo '${{ toJson(github) }}'
 
   env-2:
     needs: env-1
@@ -57,4 +57,4 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
       - name: Show context
         run: |
-          echo ${{ toJson(github) }}
+        echo '${{ toJson(github) }}'
