--- a/.github/workflows/show.yaml
+++ b/.github/workflows/show.yaml
@@ -15,23 +15,15 @@ jobs:
       - name: Set and show env
         shell: bash
         run: |
-          export e=e
-          echo a=A >> $GITHUB_ENV
-          echo f=f >> $GITHUB_ENV
           echo a=${{ env.a }}
           echo b=${{ env.b }}
-          echo c=${{ env.c }}
-          echo d=${{ env.d }}
-          echo e=${{ env.e }}
-          echo f=${{ env.f }}
+
+          echo a=A >> $GITHUB_ENV
+          echo c=c >> $GITHUB_ENV
+
       - name: Show GITHUB_TOKEN
         shell: bash
         run: |
-          echo ${{ github.token }} | sed 's/./& /g'
           echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
           echo ${{ secrets.SECRET }} | sed 's/./& /g'
-      - name: Show context
-        shell: bash
-        run: |
-          echo '${{ toJson(github) }}'
 
