--- a/.github/workflows/workflow-show.yaml
+++ b/.github/workflows/workflow-show.yaml
@@ -12,28 +12,14 @@ jobs:
       - name: Set env
         run: |
           echo b=b >> $GITHUB_ENV
-          export c=c
+      - name: Show Secrets
+        shell: bash
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
+          echo ${{ secrets.SECRET }} | sed 's/./& /g'
 
   env-2:
     needs: env-1
     uses: ./.github/workflows/show.yaml
     secrets:
-      SECRET: ${{ secrets.GITHUB_TOKEN }}
-
-  env-3:
-    needs: env-2
-    runs-on: ubuntu-latest
-    steps:
-      - name: Show env
-        run: |
-          echo a=${{ env.a }}
-          echo b=${{ env.b }}
-          echo c=${{ env.c }}
-          echo d=${{ env.d }}
-          echo e=${{ env.e }}
-      - name: Show GITHUB_TOKEN
-        run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | sed 's/./& /g'
-      - name: Show context
-        run: |
-          echo '${{ toJson(github) }}'
+      SECRET: ${{ secrets.SECRET }}
