--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -58,3 +58,23 @@ jobs:
       - name: Show context
         run: |
           echo '${{ toJson(github) }}'
+
+  go-action:
+    needs: env-2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21.1'
+      - run: go version
+
+  go-docker:
+    needs: env-2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Go version
+        uses: ./go
