--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -68,6 +68,18 @@ jobs:
         with:
           go-version: '1.21.1'
       - run: go version
+      - run: |
+          cd go
+          docker build -t go .
+
+  go-docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+      - run: |
+          cd go
+          docker build -t go .
+          docker run --rm go
 
   go-docker:
     runs-on: ubuntu-latest
