--- a/.github/workflows/action-show.yaml
+++ b/.github/workflows/action-show.yaml
@@ -86,3 +86,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Go version
         uses: ./go
+
+  go-container:
+    runs-on: ubuntu-latest
+    containere:
+      image: golang:1.21.1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - run: go version
