--- a/.github/workflows/workflow-show.yaml
+++ b/.github/workflows/workflow-show.yaml
@@ -23,3 +23,11 @@ jobs:
     uses: ./.github/workflows/show.yaml
     secrets:
       SECRET: ${{ secrets.SECRET }}
+        
+  env-3:
+    needs: env-2
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo a=${{ env.a }}
+          echo b=${{ env.b }}
