--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   dispatch:
+    if: ${{ !(github.event.workflow_run) }}
     runs-on: ubuntu-latest
     permissions:
       actions: write
