--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -20,6 +20,8 @@ jobs:
   summary:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Run CLI command
         id: evals
         run: |
